# pixel_impulse_response_calc

./: PIR_theory_summary.md  README.md  notes-PIR.md  pixel_irradiance_model.py  pyproject.toml  try1.py
.github/workflows/: deploy-marimo.yaml
examples/: demo_interpolator.py  demo_pixel_array.py  demo_pixel_array_superposition.py  demo_pixel_spot.py
notebooks/: PIR_and_pixel_array.py  pixel_spot_app.py
src/pir_optics/: __init__.py  pixel_array.py  pixel_irradiance.py
src/pir_optics/docs/: PIR_theory_summary.md
