[project]
name = "pir-optics"
version = "0.1.0"
description = "Tools for DMD-based pixel irradiance and projection optics"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "marimo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pir_optics"]
